{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 10,
  "lineage": "d6783c94-935f-2911-be00-fbad05bad971",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d4c8a005032127f",
            "arn": "arn:aws:ec2:ap-southeast-2:627073650332:instance/i-021876684703b65c4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021876684703b65c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "devboard-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-021dc850a801369dd"
              }
            ],
            "primary_network_interface_id": "eni-021dc850a801369dd",
            "private_dns": "ip-10-0-1-58.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-15-135-168-247.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "15.135.168.247",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d118631cc5a934d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fec0195168107f85",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-ec2",
              "Project": "devboard"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-ec2",
              "Project": "devboard"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef79f636a7eff30a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627073650332",
            "id": "i-021876684703b65c4",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_key_pair.devboard_key",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.al2023_arm64_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:627073650332:internet-gateway/igw-0d20bb64181f4a1a2",
            "id": "igw-0d20bb64181f4a1a2",
            "owner_id": "627073650332",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-igw",
              "Project": "devboard"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-igw",
              "Project": "devboard"
            },
            "vpc_id": "vpc-07693117a1ca3c1e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_ipv4_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d20bb64181f4a1a2",
            "id": "r-rtb-09d8b2008905766d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09d8b2008905766d5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627073650332",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09d8b2008905766d5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:627073650332:route-table/rtb-09d8b2008905766d5",
            "id": "rtb-09d8b2008905766d5",
            "owner_id": "627073650332",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-public-rt",
              "Project": "devboard"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-public-rt",
              "Project": "devboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-07693117a1ca3c1e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627073650332",
            "id": "rtb-09d8b2008905766d5",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078bbe325842358d2",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-09d8b2008905766d5",
            "subnet_id": "subnet-0fec0195168107f85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:627073650332:security-group/sg-0ef79f636a7eff30a",
            "description": "Security group for DevBoard EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef79f636a7eff30a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend HTTP",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "119.18.2.3/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devboard-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "627073650332",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-ec2-sg",
              "Project": "devboard"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-ec2-sg",
              "Project": "devboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-07693117a1ca3c1e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627073650332",
            "id": "sg-0ef79f636a7eff30a",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:627073650332:subnet/subnet-0fec0195168107f85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fec0195168107f85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627073650332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-public-subnet",
              "Project": "devboard"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-public-subnet",
              "Project": "devboard"
            },
            "vpc_id": "vpc-07693117a1ca3c1e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627073650332",
            "id": "subnet-0fec0195168107f85",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:627073650332:vpc/vpc-07693117a1ca3c1e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08635e8d095c1a99e",
            "default_route_table_id": "rtb-0826f3f1a21745ca6",
            "default_security_group_id": "sg-0fcfd625ee849095b",
            "dhcp_options_id": "dopt-038f8ee744673cb6d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07693117a1ca3c1e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0826f3f1a21745ca6",
            "owner_id": "627073650332",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-vpc",
              "Project": "devboard"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devboard-dev-vpc",
              "Project": "devboard"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "627073650332",
            "id": "vpc-07693117a1ca3c1e3",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}